<resources>
    <string name="app_name">Lucas_Lucas_IMC</string>
    <string name="titulo">IMC</string>
    <string name="peso">Insira seu peso</string>
    <string name="altura">Insira sua altura</string>
    <string name="idade">Insira sua idade</string>
    <string name="sexo">Insira seu sexo</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
</resources>